--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -17,52 +17,39 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
 
-    <!-- Static navbar
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">EMMA</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-          </ul>
-        </div>
-      </div>
-    </div> -->
-
-
 	<div id="headerwrap">
 	    <div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3">
+			<div class="row centered">
+				<div class="col-lg-12">
 					<h1>EMMA GARDNER</h1>
 					<h4>WEB DEVELOPER</h4>
+            <div class="row centered">
+              <div class="col-lg-12 col-md-12">
+                <div class="col-lg-3 col-md-3">
+                  <a href="https://github.com/emmagard"><i class="fa fa-github"></i></a>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                  <a href="https://www.linkedin.com/in/emmagard"><i class="fa fa-linkedin"></i></a>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                  <a href="#"><i class="fa fa-briefcase" id="portfolio-view"></i></a>
+                </div>
+                <div class="col-lg-3 col-md-3">
+                  <a href="#" title="emmalgardner@icloud"><i class="fa fa-envelope" id="email"></i></a>
+                </div>
+              </div>
+            </div>
 				</div>
-			</div><! --/row -->
-	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+			</div><!--/row -->
+	    </div><!-- /container -->
+	</div><!--/headerwrap -->
 
-	<section id="works"></section>
+	<section id="works">
 	<div class="container">
 		<div class="row centered mt mb">
 			<h1>My Portfolio</h1>
@@ -77,24 +64,19 @@
 				<a href="http://solgarden.herokuapp.com/"><img src="assets/img/portfolio/SolGarden.png" class="img-responsive"></a>
 			</div>
 
-		</div><! --/row -->
-	</div><! --/container -->
+		</div><!--/row -->
+	</div><!--/container -->
+  </section>
 
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
-        <div class="col-lg-4">
+        <div class="col-lg-12">
           Skills: <p>CSS | HTML | PostgreSQL | Ruby on Rails | JavaScript | jQuery | Angular | Git </p>
         </div>
-				<div class="col-lg-4">
-					<a href="https://www.linkedin.com/in/emmagard"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-4">
-					<a href="https://github.com/emmagard"><i class="fa fa-github"></i></a>
-				</div>
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+			</div><!--/row -->
+		</div><!--/container -->
+	</div><!--/social -->
 
 	<div id="footerwrap">
 		<div class="container">
@@ -120,5 +102,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
