changed background color and cleaned up folder

--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -68,7 +68,7 @@
 	</div><!--/container -->
   </section>
 
-	<div id="social">
+	<div id="skills">
 		<div class="container">
 			<div class="row centered">
         <div class="col-lg-12">
