--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -31,16 +31,16 @@
             <div class="row centered">
               <div class="col-lg-12 col-md-12">
                 <div class="col-lg-3 col-md-3">
-                  <a href="https://github.com/emmagard"><i class="fa fa-github"></i></a>
+                  <a href="https://github.com/emmagard" title="GitHub"><i class="fa fa-github"></i></a>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                  <a href="https://www.linkedin.com/in/emmagard"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/emmagard" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                  <a href="#"><i class="fa fa-briefcase" id="portfolio-view"></i></a>
+                  <a href="#" title="Portfolio"><i class="fa fa-briefcase" id="portfolio-view"></i></a>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                  <a href="#" title="emmalgardner@icloud"><i class="fa fa-envelope" id="email"></i></a>
+                  <a href="#" title="Resume"><i class="fa fa-paperclip" id="resume"></i></a>
                 </div>
               </div>
             </div>
