resume is linked to paperclip icon

--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -40,7 +40,7 @@
                   <a href="#" title="Portfolio"><i class="fa fa-briefcase" id="portfolio-view"></i></a>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                  <a href="#" title="Resume"><i class="fa fa-paperclip" id="resume"></i></a>
+                  <a href="assets/img/egardner resume pdf.pdf" target="blank" title="Resume"><i class="fa fa-paperclip" id="resume"></i></a>
                 </div>
               </div>
             </div>
