added angular project to portfolio and added descriptions to all projects in portfolio

--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -55,16 +55,27 @@
 			<h1>My Portfolio</h1>
 
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <p>A community website for the city of Boston. Check the weather, Instagram, and Bostinno.</p>
 				<a href="http://helloboston.herokuapp.com/"><img src="assets/img/portfolio/AtAGlance.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <p>An interactive image sharing web application built with Ruby on Rails and JavaScript.</p>
 				<a href="http://photo-mixer.herokuapp.com/"><img src="assets/img/portfolio/PHOTO_MIXERfoundation-rails.png" class="img-responsive"></a>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <p>An app for gardeners to keep track of their sowings from season to season.</p>
 				<a href="http://solgarden.herokuapp.com/"><img src="assets/img/portfolio/SolGarden.png" class="img-responsive"></a>
 			</div>
 
 		</div><!--/row -->
+
+    <div class="row centered mt mb">
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery-no-hover">
+        <p>A Madlibs game using the AngularJS framework. In the making...</p>
+        <img src="assets/img/portfolio/angular_madlibs2.png" class="img-responsive">
+      </div>
+
+    </div><!--/row -->
 	</div><!--/container -->
   </section>
 
@@ -72,7 +83,7 @@
 		<div class="container">
 			<div class="row centered">
         <div class="col-lg-12">
-          Skills: <p>CSS | HTML | PostgreSQL | Ruby on Rails | JavaScript | jQuery | Angular | Git </p>
+          <h4>Skills:</h4> <p>CSS | HTML | PostgreSQL | Ruby on Rails | JavaScript | jQuery | Angular | Git </p>
         </div>
 			</div><!--/row -->
 		</div><!--/container -->
@@ -89,11 +100,11 @@
 					<p>Boston, MA</p>
 				</div>
 				<div class="col-lg-4">
-					<p>emmalgardner@icloud.com</p>
+					<p>emmagard@gmail.com</p>
 				</div>
 			</div>
 		</div>
-	</div><! --/footerwrap -->
+	</div><!--/footerwrap -->
 
 
 
