--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -49,10 +49,20 @@
 	    </div><!-- /container -->
 	</div><!--/headerwrap -->
 
+<div id="skills">
+    <div class="container">
+      <div class="row centered">
+        <div class="col-lg-12">
+          <h4>Skills:</h4> <p>CSS | HTML | PostgreSQL | Ruby on Rails | JavaScript | jQuery | AngularJS | Git </p>
+        </div>
+      </div><!--/row -->
+    </div><!--/container -->
+  </div><!--/skills -->
+
 	<section id="works">
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Portfolio</h1>
+			<h1>Portfolio</h1>
 
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <p>A community website for the city of Boston. Check the weather, Instagram, and Bostinno.</p>
@@ -77,17 +87,7 @@
 
     </div><!--/row -->
 	</div><!--/container -->
-  </section>
-
-	<div id="skills">
-		<div class="container">
-			<div class="row centered">
-        <div class="col-lg-12">
-          <h4>Skills:</h4> <p>CSS | HTML | PostgreSQL | Ruby on Rails | JavaScript | jQuery | Angular | Git </p>
-        </div>
-			</div><!--/row -->
-		</div><!--/container -->
-	</div><!--/social -->
+  </section><!--works-->
 
 	<div id="footerwrap">
 		<div class="container">
