--- a/instant/theme/index.html
+++ b/instant/theme/index.html
@@ -31,10 +31,10 @@
             <div class="row centered">
               <div class="col-lg-12 col-md-12">
                 <div class="col-lg-3 col-md-3">
-                  <a href="https://github.com/emmagard" title="GitHub"><i class="fa fa-github"></i></a>
+                  <a href="https://github.com/emmagard" target="blank" title="GitHub"><i class="fa fa-github"></i></a>
                 </div>
                 <div class="col-lg-3 col-md-3">
-                  <a href="https://www.linkedin.com/in/emmagard" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/emmagard" target="blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
                 </div>
                 <div class="col-lg-3 col-md-3">
                   <a href="#" title="Portfolio"><i class="fa fa-briefcase" id="portfolio-view"></i></a>
@@ -62,7 +62,7 @@
 	<section id="works">
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>Portfolio</h1>
+			<h1 id="portfolio">Portfolio</h1>
 
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <p>A community website for the city of Boston. Check the weather, Instagram, and Bostinno.</p>
