added a new project to my portfolio

--- a/index.html
+++ b/index.html
@@ -64,25 +64,30 @@
 		<div class="row centered mt mb">
 			<h1 id="portfolio">Portfolio</h1>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <p>Quadrupeds pet services. An informational site for a friend's growing business.</p>
+        <a href= "http://emmagard.github.io/quadrupeds/" target="blank"><img src="assets/img/portfolio/Quadrupeds.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <p>A community website for the city of Boston. Check the weather, Instagram, and Bostinno.</p>
-				<a href="http://helloboston.herokuapp.com/"><img src="assets/img/portfolio/AtAGlance.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <p>An interactive image sharing web application built with Ruby on Rails and JavaScript.</p>
-				<a href="http://photo-mixer.herokuapp.com/"><img src="assets/img/portfolio/PHOTO_MIXERfoundation-rails.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="http://helloboston.herokuapp.com/" target="blank"><img src="assets/img/portfolio/AtAGlance.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <p>An app for gardeners to keep track of their sowings from season to season.</p>
-				<a href="http://solgarden.herokuapp.com/"><img src="assets/img/portfolio/SolGarden.png" class="img-responsive"></a>
-			</div>
+        <a href="http://solgarden.herokuapp.com/" target="blank"><img src="assets/img/portfolio/SolGarden.png" class="img-responsive"></a>
+      </div>
 
 		</div><!--/row -->
 
     <div class="row centered mt mb">
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery-no-hover">
+
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <p>An interactive image sharing web application built with Ruby on Rails and JavaScript.</p>
+        <a href="http://photo-mixer.herokuapp.com/" target="blank"><img src="assets/img/portfolio/PHOTO_MIXERfoundation-rails.png" class="img-responsive"></a>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <p>A Madlibs game using the AngularJS framework. In the making...</p>
-        <img src="assets/img/portfolio/Angular_Madlibs2.png" class="img-responsive">
+        <a href="https://github.com/emmagard/madlibs" target="blank"><img src="assets/img/portfolio/Angular_Madlibs2.png" class="img-responsive"></a>
       </div>
 
     </div><!--/row -->
