added photo to portfolio

--- a/index.html
+++ b/index.html
@@ -23,30 +23,33 @@
   <body>
 
 	<div id="headerwrap">
-	    <div class="container">
-			<div class="row centered">
-				<div class="col-lg-12">
-					<h1>EMMA GARDNER</h1>
-					<h4>WEB DEVELOPER</h4>
-            <div class="row centered">
-              <div class="col-lg-12 col-md-12">
-                <div class="col-lg-3 col-md-3">
-                  <a href="https://github.com/emmagard" target="blank" title="GitHub"><i class="fa fa-github"></i></a>
-                </div>
-                <div class="col-lg-3 col-md-3">
-                  <a href="https://www.linkedin.com/in/emmagard" target="blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <div class="col-lg-3 col-md-3">
-                  <a href="#" title="Portfolio"><i class="fa fa-briefcase" id="portfolio-view"></i></a>
-                </div>
-                <div class="col-lg-3 col-md-3">
-                  <a href="assets/img/egardner resume pdf.pdf" target="blank" title="Resume"><i class="fa fa-paperclip" id="resume"></i></a>
-                </div>
+    <div class="container">
+		  <div class="row centered">
+        <div class= "col-lg-4">
+          <img src="assets/img/portfolio/GA_08_14-154.jpg" id="portrait">
+        </div>
+        <div class= "col-lg-8">
+          <h1>EMMA GARDNER</h1>
+          <h4>WEB DEVELOPER</h4>
+          <div class="row centered">
+            <div class="col-lg-12 col-md-12">
+              <div class="col-lg-3 col-md-3 icon">
+                <a href="https://github.com/emmagard" target="blank" title="GitHub"><i class="fa fa-github"></i></a>
+              </div>
+              <div class="col-lg-3 col-md-3 icon">
+                <a href="https://www.linkedin.com/in/emmagard" target="blank" title="LinkedIn"><i class="fa fa-linkedin"></i></a>
+              </div>
+              <div class="col-lg-3 col-md-3 icon">
+                <a href="#" title="Portfolio"><i class="fa fa-briefcase" id="portfolio-view"></i></a>
+              </div>
+              <div class="col-lg-3 col-md-3 icon">
+                <a href="assets/img/egardner resume pdf.pdf" target="blank" title="Resume"><i class="fa fa-paperclip" id="resume"></i></a>
               </div>
             </div>
-				</div>
+          </div><!-- row -->
+        </div>
 			</div><!--/row -->
-	    </div><!-- /container -->
+	  </div><!-- /container -->
 	</div><!--/headerwrap -->
 
 <div id="skills">
