changed url for quadrupeds

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <p>Quadrupeds pet services. An informational site for a friend's growing business.</p>
-        <a href= "http://emmagard.github.io/quadrupeds/" target="blank"><img src="assets/img/portfolio/Quadrupeds.png" class="img-responsive"></a>
+        <a href= "http://www.quadrupedsllc.com/" target="blank"><img src="assets/img/portfolio/Quadrupeds.png" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
         <p>A community website for the city of Boston. Check the weather, Instagram, and Bostinno.</p>
