--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <a href="http://photo-mixer.herokuapp.com/" target="blank"><img src="assets/img/portfolio/PHOTO_MIXERfoundation-rails.png" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <p>A Madlibs game using the AngularJS framework. In the making...</p>
-        <a href="https://github.com/emmagard/madlibs" target="blank"><img src="assets/img/portfolio/Angular_Madlibs2.png" class="img-responsive"></a>
+        <p>Find the weather in the city of your choice. In the making...</p>
+        <a href="https://github.com/emmagard/weather" target="blank"><img src="assets/img/portfolio/localhost_8000___.png" class="img-responsive"></a>
       </div>
 
     </div><!--/row -->
