--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a href="http://photo-mixer.herokuapp.com/" target="blank"><img src="assets/img/portfolio/PHOTO_MIXERfoundation-rails.png" class="img-responsive"></a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-        <p>Find the weather in the city of your choice. In the making...</p>
+        <p>Find the weather in the city of your choice. View the forecast for today, tomorrow, 5-day, or 10-day. In the making...</p>
         <a href="https://github.com/emmagard/weather" target="blank"><img src="assets/img/portfolio/localhost_8000___.png" class="img-responsive"></a>
       </div>
 
